--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Landegge</title>
+    <title>Landegge.NL</title>
 </head>
 <body>
-Landegge
+Landegge.NL
 </body>
 </html>
