--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
     <meta charset="UTF-8">
     <title>Landegge.NL</title>
 </head>
 <body>
-<img src="dark-side.jpg" alt="Dark Side">
+<div class="imgbox">
+    <img class="center-fit" src='dark-side.jpg'>
+</div>
 </body>
 </html>
